--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <meta charset="utf-8">
-<meta name="wiewport" content="width=device-width; initial-scale=1.0">
+<meta name="viewport" content="width=device-width; initial-scale=1.0">
 <link rel="icon" href="alura.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="estilo.css">
@@ -22,7 +22,7 @@
         <textarea class="texto" id="texto" placeholder="ingrese el texto aqui"></textarea>
     </div>
     <div class="advertencia">
-        <iconify-icon class="icono" width="3.3vw" height="2.8vh" icon="mdi:warning-circle"></iconify-icon>
+        <iconify-icon class="icono" width="3.5vw" height="auto" icon="mdi:warning-circle"></iconify-icon>
         <p class="texto-adv">Solo letras minusculas y sin acentos.</p>
     </div>
     <div class="botones"> 
