--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div>
         <div class="rectangulo"></div>
-        <textarea class="resultado" id="resultado"></textarea>
+        <textarea class="resultado" id="resultado" readonly="readonly"></textarea>
         <div class="" id="munieco">
             <img src="Muñeco.png" alt="muñeco" class="munieco">
         </div>
