--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
             <h1 class="msj_uno">Ningun mensaje fue encontrado</h1>
             <p class="msj_dos">Ingresa el texto que desees encriptar o desencriptar</p>
         </div>
-    </div>    
+    </div>
+    <footer>
+        <a href="https://www.linkedin.com/in/julian-alfredo-aguirre/"><img src="linkdn.png" class="linkedin" alt=""></a>
+        <a href="https://github.com/JulianAguirre-sk"><img src="github.png" class="github" alt=""></a>
+        <p>&copy 2023 by Julian Aguirre powered by <a href="https://www.oracle.com/ar/">Oracle</a> + Alura latam</p>
+    </footer>    
 </div> 
 <script src="app.js"></script>
 <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
